# lite_rc_v1.0

./: partitions.csv  sdkconfig  sdkconfig.old
components/ADC/: ADC.c  CMakeLists.txt
components/ADC/include/: ADC.h
components/buzz/: CMakeLists.txt  buzz.c
components/buzz/include/: buzz.h
components/displayer_driver/: CMakeLists.txt  component.mk  lcd_font.h  st7735s.c  st7735s.h
components/pca9555/: CMakeLists.txt  pca9555.c
components/pca9555/include/: pca9555.h
components/rmt_fsm/: CMakeLists.txt  rmt_fsm.c
components/rmt_fsm/include/: rmt_fsm.h
components/rx_ble/: CMakeLists.txt  rx_ble.c
components/rx_ble/include/: rx_ble.h
components/uart_TR/: CMakeLists.txt  uart_TR.c
components/uart_TR/include/: uart_TR.h
components/user_ui/: CMakeLists.txt  user_ui.c
components/user_ui/include/: user_ui.h
main/: CMakeLists.txt  main.c  user_ui_old.c
